# simdiff

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml
bench/: baseline.py  corpus.py  legacy_shell_adapter.py  policy.py  realistic_shell_corpus.py  realistic_shell_run.py  run.py  session_corpus.py  session_run.py
docs/: 2026-06-25-simdiff-design.md
examples/: firewall_integration.py  guard_tool_call.py  mcp_guard_server.py  session_recon_exfil.py  solana_drain.py
src/simdiff/: __init__.py  cli.py  delta.py  guard.py  session.py
src/simdiff/adapters/: __init__.py  base.py  filesystem.py  http.py  shell.py  solana.py  sql.py
tests/: test_benchmark.py  test_cli.py  test_delta.py  test_filesystem_adapter.py  test_guard.py  test_hardening.py  test_http_adapter.py  test_properties.py  test_realistic_shell_benchmark.py  test_session.py  test_session_benchmark.py  test_shell_adapter.py  test_solana_adapter.py  test_sql_adapter.py
