[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simdiff"
version = "0.1.0"
description = "The effect layer for AI-agent firewalls: simulate an action, return a canonical effect delta. Zero deps, deterministic, fail-closed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "simdiff contributors" }]
keywords = ["ai-agents", "agent-security", "pre-execution", "simulation", "effect", "firewall", "guardrails"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Security",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MrPredic/simdiff"
Issues = "https://github.com/MrPredic/simdiff/issues"

[project.scripts]
simdiff = "simdiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simdiff"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
