[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simdiff"
version = "0.3.0"
description = "The effect layer for AI-agent firewalls: simulate an action, return a canonical effect delta. Zero deps, deterministic, fail-closed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "simdiff contributors" }]
keywords = [
  "ai-agents", "agent-security", "pre-execution", "simulation", "effect",
  "firewall", "guardrails", "mcp", "llm", "tool-calling",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/MrPredic/simdiff"
Repository = "https://github.com/MrPredic/simdiff"
Issues = "https://github.com/MrPredic/simdiff/issues"
Changelog = "https://github.com/MrPredic/simdiff/blob/main/CHANGELOG.md"

[project.scripts]
simdiff = "simdiff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/simdiff"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
